# noted

./: .gitignore  README.md
backend/: .wakatime-project  README.md
desktop/: .gitignore  .wakatime-project  Cargo.toml  Justfile  config.example.toml
desktop/macros/: Cargo.toml
desktop/macros/src/: lib.rs
desktop/src/: config.rs  lib.rs
desktop/src/gui/: channels.rs  content.rs  mod.rs  root.rs
desktop/src/schema/: channels.rs  mod.rs  notes.rs
docs/: SYNC.md  UI_SPEC.md
mobile/: .wakatime-project
web/: .wakatime-project  LICENSE
web_extension/: .wakatime-project
