[package]
name = "noted_desktop"
license = "MIT"

version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
iced = { version = "0.13.1", features = [] }
paste = "1.0.15"
polodb_core = "4.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
linkme = { version = "0.3", optional = true }
indexmap = { version = "2.0", features = ["serde"] }

[features]
default = []
preview = ["linkme"]

[[bin]]
name = "preview"
required-features = ["preview"]
